<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="369dp"
            android:background="@color/cinza"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor1" />

            <EditText
                android:id="@+id/numero1"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="number"
                android:numeric="decimal" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="496dp"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_somar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="somar"
                        android:text="@string/somar" />

                    <Button
                        android:id="@+id/btn_subtrair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="subtrair"
                        android:text="@string/subtrair" />

                    <Button
                        android:id="@+id/btn_multiplicar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="multiplicar"
                        android:text="@string/multiplicar" />

                    <Button
                        android:id="@+id/btn_dividir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="dividir"
                        android:text="@string/dividir" />
                </TableRow>

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valor2" />

            <EditText
                android:id="@+id/numero2"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="number"
                android:numeric="decimal" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado" />

            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>